# DAT255-group12

./: .gitattributes  .gitignore  Copy_of_09_tabular.ipynb  Kaggle_notebook.ipynb  LICENSE  README.md  fast_model.ipynb  pyproject.toml
bluebook-for-bulldozer/: valid_xs_final.pkl
models/: final_data_train.pkl  final_data_val.pkl  valid_xs_final.pkl  xs_final.pkl
reports/: report.md
src/models/: Kaggle_notebook.ipynb  Notebook_blogpost_tabular_data.ipynb  na_summary.xlsx  outer_join.xlsx  testfile
src/models/Neural network/: 3_neural_network.ipynb  4_neural_network.ipynb
src/models/Random Forest/: 1_split_datasets.ipynb  2_clean_data_train_model.ipynb  3_use_RF_model.ipynb  5_interpreting_results.ipynb
