[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["MaggeSN <122047522+MaggeSN@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastai = "^2.7.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
