[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["MaggeSN <122047522+MaggeSN@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastai = "^2.7.14"
fastbook = "^0.0.29"
ipykernel = "^6.29.4"
dtreeviz = "^2.2.2"
kaggle = "^1.6.8"
treeinterpreter = "^0.2.3"
waterfallcharts = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
